# PD_Flow_ROS2

./: .gitignore  CMakeLists.txt  DisplayImage  README.md  main_scene_flow_visualization.cpp  scene_flow_impair.cpp  scene_flow_visualization.cpp  scene_flow_visualization.h  scene_flow_visualization_LEGACY.cpp  test.cpp
ROS2/src/eu_tests/: CMakeLists.txt
ROS2/src/pd_flow/: CMakeLists.txt  package.xml
ROS2/src/pd_flow/src/: Image_combiner.cpp  PD_flow.cpp  VectorFieldPublisher.cpp  image_combiner_node.cpp  image_viewer.cpp  pd_flow_node.cpp  point_cloud.cpp  scene_flow_fun.cpp  scene_flow_fun.h  scene_flow_impair.cpp  scene_flow_impair.h  scene_flow_node.cpp  scene_flow_visualization.cpp  scene_flow_visualization.h
ROS2/src/pd_flow/src/test/: scene_flow_fun.cpp  scene_flow_fun.h  scene_flow_impair.cpp
ROS2/src/pd_flow_msgs/: CMakeLists.txt  package.xml
ROS2/src/pd_flow_msgs/msg/: CombinedImage.msg  FlowField.msg
codigoAntiguo/: CMakeLists.txt  scene_flow_impair.cpp
ros2_ws/rosbag2_2024_09_12-14_54_47/: metadata.yaml
ros2_ws/src/eu_tests/: package.xml
ros2_ws/src/eu_tests/src/: scene_flow_impair.cpp  scene_flow_node.cpp
ros2_ws/src/pd_flow/: CMakeLists.txt  package.xml
ros2_ws/src/pd_flow/src/: image_combiner_node.cpp  image_viewer_node.cpp  pd_flow_node.cpp  scene_flow_visualization.cpp  scene_flow_visualization.h
ros2_ws/src/pd_flow/src/test/: scene_flow_fun.cpp
ros2_ws/src/pd_flow_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/pd_flow_msgs/msg/: CombinedImage.msg  FlowField.msg
ros2_ws/src/pd_flow_visual/: package.xml  setup.cfg  setup.py
ros2_ws/src/pd_flow_visual/launch/: visual_launch.py
ros2_ws/src/pd_flow_visual/pd_flow_visual/: combined_image.py  cv2_color_from_speed.py  cv2_color_superposition.py  cv2_rgb_point_cloud.py  cv2_visual.py  display_color_from_speed.py  display_combined_image.py  display_rgb_point_cloud.py  eu_cv2_visual.py  flow_field_publisher.py  vispy_color_from_speed.py
ros2_ws/src/pd_flow_visual/pd_flow_visual/old_code/: 3d_viwer.py  cv2_visual copy.py  cv2_visual.py  eu_cv2_visual.py
